--- a/README.rdoc
+++ b/README.rdoc
@@ -1,7 +1,9 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+project of Valeriu Braghs
+Subscription-based web application
+
+http://www.valwrites.eu
 
 Things you may want to cover:
 
